--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container">
-        <a href="index.html"><img class="logo" href="index.html" src="./images/logonv.png" alt="The letters N and V in hot and dark pink, with a light yellow pencil behind them."></a>
+        <a href="index.html"><img class="logo" href="index.html" src="../../images/logonv.png" alt="The letters N and V in hot and dark pink, with a light yellow pencil behind them."></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
