--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="./pages/about.html">About Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="./pages/about.html">Aboutsds Me</a></li>
                 <li class="nav-item"><a class="nav-link" href="./pages/contact.html">Contact Me</a></li>
                 <li class="nav-item"><a class="nav-link" href="./pages/portfolio.html">Portfolio</a></li>
             </ul>
