--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container">
-        <a href="index.html"><img class="logo" href="index.html" src="../../images/logonv.png" alt="The letters N and V in hot and dark pink, with a light yellow pencil behind them."></a>
+        <a href="index.html"><img class="logo" href="index.html" src="./images/logonv.png" alt="The letters N and V in hot and dark pink, with a light yellow pencil behind them."></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="./pages/about.html">Aboutsds Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="./pages/about.html">About Me</a></li>
                 <li class="nav-item"><a class="nav-link" href="./pages/contact.html">Contact Me</a></li>
                 <li class="nav-item"><a class="nav-link" href="./pages/portfolio.html">Portfolio</a></li>
             </ul>
