--- a/pages/more_pages/130.html
+++ b/pages/more_pages/130.html
@@ -26,7 +26,7 @@
 
 <div class="container text-center mt-4">
     <div class="row justify-content-center">
-        <img src="/portfolio.github.io/images/130.jpg" alt="" class="img-fluid w-100">
+        <img src="../../../images/130.jpg" alt="" class="img-fluid w-100">
     </div>
 </div>
 
